syntax = "proto3";

package myBusFinder;

message StreamDelay {
    int32 delay = 1;
}

message Empty {

}

service DataStream {
    rpc startDataStream(StreamDelay) returns (Empty) {}
}

message BusIdRequest {
    string busid = 1;
}

message BusReply {
    string businfo = 1;
}

service BusLocation {
    rpc consumeQueue(BusIdRequest) returns (stream BusReply) {}
}
